# UvA-DevOps-Software-QA-LLM-MVP

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  MicroservicesChange.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.sh  streamlit_app.py  tox.ini
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/analyzers/: bandit.py  base.py  radon.py  registry.py  ruff.py  trufflehog.py
app/api/: analysis_routes.py  repair_routes.py  session_routes.py
app/core/: config.py  containers.py  logging.py  security.py  util.py
app/domain/: models.py  schemas.py
app/llm/: anthropic_provider.py  base.py  client.py  ollama_provider.py  openai_client.py  openai_provider.py  registry.py
app/normalizers/: base.py  (+8 more)
aws/: cloudformation.yaml
demo/: domain.py
nginx/: default.conf
scripts/: dev_test_bandit.py  quality_gate.py
terraform/: alb.tf  ecs.tf  efs.tf  iam.tf  main.tf  outputs.tf  security.tf  variables.tf  vpc.tf
tests/: conftest.py  test_analysis_ui.py  test_anthropic_provider.py  test_bandit.py  test_bandit_analyzer.py  test_bandit_normalizer.py  test_context_extractor.py  test_cost_tracking.py  test_health.py  test_llm_client.py  test_llm_registry.py  test_normalizer_registry.py  test_normalizer_util.py  test_openapi.py  test_path_utils.py  test_prompt_builder.py  test_radon_analyzer.py  test_radon_normalizer.py  test_repair_service.py  test_ruff_analyzer.py  test_ruff_normalizer.py  test_secrets.py  test_session_upload.py  test_trufflehog_analyzer.py  test_trufflehog_normalizer.py
(+107 files in other folders)
