[project]
name = "quality-repair-tool"
version = "0.1.0"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",  # Crucial for testing LLMs without making actual API calls
    "httpx>=0.27",        # Needed if you want to test your FastAPI endpoints
]

[tool.pytest.ini_options]
# Tell pytest where your tests live
testpaths = ["tests"]

# Ensure your 'app' folder is recognizable as a module during tests
pythonpath = ["."]

# Default command line arguments: verbose output, shorter tracebacks
addopts = "-v --tb=short"